fix(comp:pagination): size select text shouldn't overflow at 100

--- a/packages/components/pagination/style/index.less
+++ b/packages/components/pagination/style/index.less
@@ -27,7 +27,7 @@
   &-sm,
   &-md {
     .@{pagination-prefix}-sizes > .@{select-prefix} {
-      width: 60px;
+      width: 64px;
     }
 
     .@{pagination-prefix}-item,
